--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -20,12 +20,13 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding:3.75em;
 }
 #black > h1{
     text-align: center;
     font-family: sans-serif;
-    font-weight: 400;
-    font-size: 80px;
+    font-weight: 300;
+    font-size: 70px;
     line-height: 100px;
     margin-top: 1em;
 }
